--- a/wav2vec2-xls-r/requirements.txt
+++ b/wav2vec2-xls-r/requirements.txt
@@ -1,10 +1,10 @@
-huggingface_hub[cli]
 git+https://github.com/huggingface/transformers.git@a7ff2f23a07d1af8359390489ea399c3a1dbda38
-accelerate
 datasets>=2.6.1
+accelerate>=0.27.2
 librosa
 soundfile==0.12.1
 torchaudio
 evaluate>=0.3.0
 jiwer
 tensorboard
+huggingface_hub[cli]
